--- a/index2.html
+++ b/index2.html
@@ -5,23 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bluepoint-it</title>
+    <title>ProGamers</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" href="css/main.css">
-    <script src="https://kit.fontawesome.com/9a2f3dcc35.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/327a0d490c.js" crossorigin="anonymous"></script>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar" data-bs-offset="82">
 
     <nav id="navbar" class="navbar navbar-expand-lg position-fixed top-0 w-100 py-3">
         <div class="container">
-            <a class="navbar-brand" href="#"><i class="fas fa-circle"></i><span
-                    class="blue-text">blue</span>point-it.pl</a>
+            <a class="navbar-brand" href="#"><i class="fas fa-headset"></i> pro<span class="blue-text">gamers</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -43,7 +42,7 @@
         <div class="hero-img">
             <div class="hero-shadow"></div>
             <div class="hero-text">
-                <h1>witajcie w <span class="blue-text">blue</span>point-it.pl</h1>
+                <h1>witajcie w pro<span class="blue-text">gamers</span></h1>
                 <p>W miejscu, gdzie gry tworzymy z pasją</p>
                 <a href="#aboutus" type="button" class="btn btn-outline-light">poznaj nas</a>
             </div>
@@ -123,11 +122,10 @@
 
             <div class="container pb-4">
 
-                <!--PORTFOLIO NA MOBILE-->
+                <!-- PORTFOLIO NA MOBILE -->
                 <div class="card-group d-lg-none">
                     <div class="card me-sm-3">
-                        <img src="./img/carousel_slide_1_small.jpg" class="card-img-top"
-                            alt="Okładka gry Pro-X Football">
+                        <img src="img/gaming-2259191_1920.jpg" class="card-img-top" alt="Pro-X Football">
                         <div class="card-body">
                             <h5 class="card-title">Pro-X Football</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -135,30 +133,29 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./img/carousel_slide_2_small.jpg" class="card-img-top"
-                            alt="Okładka gry Need For Speed">
+                        <img src="img/car-lettering-1547641_1920.jpg" class="card-img-top" alt="Racing GT">
                         <div class="card-body">
-                            <h5 class="card-title">Need For Speed</h5>
-                            <p class="card-text">This card has supporting text below as a natural lead-in to
-                                additional
-                                content.</p>
+                            <h5 class="card-title">Racing GT</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This card has even longer content than the first to show that equal
+                                height action.</p>
                         </div>
                     </div>
                 </div>
 
 
-                <!--PORTFOLIO NA DESKTOPY-->
+                <!-- PORTFOLIO NA DESKTOPY -->
 
-                <div id="carouselCaptions" class="carousel slide d-none d-lg-block" data-bs-ride="carousel">
+                <div id="carouselExampleCaptions" class="carousel slide d-none d-lg-block" data-bs-ride="carousel">
                     <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active"
-                            aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1"
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
                             aria-label="Slide 2"></button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./img/carousel_slide_1_big.jpg" class="d-block w-100"
+                            <img src="img/gaming-2259191_1920.jpg" class="d-block w-100"
                                 alt="Okładka gry Pro-X Football">
                             <div class="carousel-caption d-none d-md-block">
                                 <h5>Pro-X Football</h5>
@@ -166,15 +163,15 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="./img/carousel_slide_2_big.jpg" class="d-block w-100"
-                                alt="Okładka gry Need For Speed">
+                            <img src="img/car-lettering-1547641_1920.jpg" class="d-block w-100"
+                                alt="Okładka gry Racing GT">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Need For Speed</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
+                                <h5>Racing GT</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
                             </div>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions"
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                         data-bs-slide="prev">
                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Previous</span>
@@ -185,6 +182,7 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
+
             </div>
         </section>
 
@@ -198,63 +196,51 @@
                     <div class="col-md-6 col-xl-4">
                         <div class="price-box">
                             <h3>mobile</h3>
-                            <p class="separator"></p>
-                            <p><span>Urządzenia</span>
-                                <i class="fa-solid fa-mobile-screen"></i>
-                            </p>
+                            <hr>
+                            <p><span>Urządzenia:</span> <i class="fas fa-mobile-alt"></i></p>
                             <p><span>Długość gry:</span> Krótka</p>
                             <p><span>Grafika:</span> Średnia</p>
                             <p><span>Online:</span> Brak</p>
-                            <p class="price-tag">449zł</p>
-                            <button class="btn btn-secondary">
-                                Zamawiam
-                            </button>
+                            <p class="price-tag">499zł</p>
+                            <button class="btn btn-secondary">zamawiam</button>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
                         <div class="price-box">
                             <h3>mobile & pc</h3>
-                            <p class="separator"></p>
-                            <p><span>Urządzenia</span>
-                                <i class="fa-solid fa-mobile-screen"></i>
-                                <i class="fa-solid fa-desktop"></i>
+                            <hr>
+                            <p><span>Urządzenia:</span> <i class="fas fa-mobile-alt"></i> <i class="fas fa-desktop"></i>
                             </p>
                             <p><span>Długość gry:</span> Średnia</p>
                             <p><span>Grafika:</span> Ładna</p>
                             <p><span>Online:</span> Tak</p>
                             <p class="price-tag">2499zł</p>
-                            <button class="btn btn-primary">
-                                Zamawiam
-                            </button>
+                            <button class="btn btn-primary">zamawiam</button>
                         </div>
                     </div>
                     <div class="col-md-6 col-xl-4">
                         <div class="price-box">
                             <h3>full pack</h3>
-                            <p class="separator"></p>
-                            <p><span>Urządzenia</span>
-                                <i class="fa-solid fa-mobile-screen"></i>
-                                <i class="fa-solid fa-desktop"></i>
-                                <i class="fa-brands fa-playstation"></i>
+                            <hr>
+                            <p><span>Urządzenia:</span> <i class="fas fa-mobile-alt"></i> <i class="fas fa-desktop"></i>
+                                <i class="fas fa-gamepad"></i>
                             </p>
                             <p><span>Długość gry:</span> Długa</p>
                             <p><span>Grafika:</span> Najlepsza</p>
                             <p><span>Online:</span> Tak</p>
-                            <h2 class="price-tag">4999zł</h2>
-                            <button class="btn btn-secondary">
-                                Zamawiam
-                            </button>
+                            <p class="price-tag">4999zł</p>
+                            <button class="btn btn-secondary">zamawiam</button>
                         </div>
                     </div>
                 </div>
 
                 <div class="text-center">
-                    <p class="price-info">Skorzystaj z jednego z trzech głównych pakietów lub <a
-                            href="#contact">skontaktuj się</a> z
-                        nami i ustal warunki
-                        indywidualne!</p>
-                    <p class="price-muted">Pakiet <strong>FULL PACK</strong> zawiera wersję gier na urządzenia mobilne,
-                        PC oraz konsole.</p>
+                    <p class="price-info">Skorzystaj z jednego z trzech głównych pakietów, lub <a
+                            href="#contact">skontaktuj
+                            się</a> z nami i ustal warunki indywidualnie!</p>
+                    <p class="text-muted">Pakiet <strong>FULL PACK</strong> zawiera wersję gier na urządzenia mobilne,
+                        PC
+                        oraz konsole.</p>
                 </div>
 
             </div>
@@ -272,67 +258,59 @@
             <div class="container">
                 <div class="card-group team-carousel">
                     <div class="card mx-3">
-                        <img src="./img/team/adult-2449725_1920.jpg" class="card-img-top" alt="Mężczyzna z brodą.">
+                        <img src="img/team/adult-2449725_1920.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">ceo</h5>
-                            <p class="card-text">Szef szefów. Nikt nie zna jego imienia. Podwładni mówią na niego "Pan
-                                Prezes"</p>
+                            <p class="card-text">Szef szefów. Nikt nie zna jego imienia. Powdładni mówią na niego "Pan
+                                Prezes".</p>
                         </div>
                         <div class="card-footer d-flex justify-content-around">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i
+                                    class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="card mx-3">
-                        <img src="./img/team/woman-1320810_1920.jpg" class="card-img-top"
-                            alt="Kobieta w długich włosach.">
+                        <img src="img/team/woman-1320810_1920.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">hr</h5>
                             <p class="card-text">Paula zajmuje się rekrutowaniem młodych i gniewnych talentów.</p>
                         </div>
                         <div class="card-footer d-flex justify-content-around">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i
+                                    class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="card mx-3">
-                        <img src="./img/team/building-2762241_1920.jpg" class="card-img-top" alt="Budowlaniec w kasku.">
+                        <img src="img/team/building-2762241_1920.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">grafik</h5>
                             <p class="card-text">Pan Wiesio jest grafikiem z długoletnim stażem na L4.</p>
                         </div>
                         <div class="card-footer d-flex justify-content-around">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i
+                                    class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="card mx-3">
-                        <img src="./img/team/entrepreneur-2326419_1920.jpg" class="card-img-top"
-                            alt="Pracownik korporacji z laptopem.">
+                        <img src="img/team/entrepreneur-2326419_1920.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">tomek</h5>
-                            <p class="card-text">To jest tomek. Nikt oprócz prezesa nie wie, czym zajmuje się Tomek.</p>
+                            <p class="card-text">To jest Tomek. Nikt oprócz prezesa nie wie, czym zajmuje się Tomek.</p>
                         </div>
                         <div class="card-footer d-flex justify-content-around">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i
+                                    class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="card mx-3">
-                        <img src="./img/team/women-1209678_1920.jpg" class="card-img-top"
-                            alt="Dwie dziewczyny przy komputerze w biurze.">
+                        <img src="img/team/women-1209678_1920.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">dział jakości</h5>
                             <p class="card-text">Ania i Hania sprawdzają starannie każdy nasz produkt.</p>
                         </div>
                         <div class="card-footer d-flex justify-content-around">
-                            <a href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fab fa-facebook-f"></i></a><a href="#"><i
+                                    class="fab fa-twitter"></i></a><a href="#"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                 </div>
@@ -350,8 +328,8 @@
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous">
         </script>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
