--- a/index.html
+++ b/index.html
@@ -378,7 +378,43 @@
 
 
             </div>
+        </section>
 
+        <section id="contact" class="contact py-5">
+            <h2>kontakt</h2>
+            <div class="underline"></div>
+
+            <div class="container pb-4">
+
+                <div class="row text-center contact-us">
+
+                    <div class="col-sm-6 col-lg-4 contact-item order-1">
+                        <h3>główna siedziba</h3>
+                        <p>ul. Długa 0</p>
+                        <p>00-000 Kraków</p>
+                        <p>+48 000 000 000</p>
+                        <p>mail@mail.pl</p>
+                    </div>
+
+                    <div class="col-lg-4 order-0 order-lg-1">
+                        <h3>social media</h3>
+                        <div class="social-media">
+                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                            <a href="#"><i class="fab fa-twitter"></i></a>
+                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 col-lg-4 contact-item order-1">
+                        <h3>główna w londynie</h3>
+                        <p>000-000 King Street</p>
+                        <p>London 00-000</p>
+                        <p>+44 20 000 000</p>
+                        <p>mail-london@mail.pl</p>
+                    </div>
+
+                </div>
+            </div>
 
         </section>
 
