--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
         <section id="contact" class="contact py-5">
             <h2>kontakt</h2>
             <div class="underline"></div>
+            <div class="contact-shadow"></div>
 
             <div class="container pb-4">
 
@@ -396,7 +397,7 @@
                         <p>mail@mail.pl</p>
                     </div>
 
-                    <div class="col-lg-4 order-0 order-lg-1">
+                    <div class="col-lg-4 order-0 order-lg-1 contact-item">
                         <h3>social media</h3>
                         <div class="social-media">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
