--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p>W miejscu, gdzie gry tworzymy z pasją</p>
                 <a href="#aboutus" type="button" class="btn btn-outline-light">poznaj nas</a>
             </div>
-            <a href="#aboutus"><i class="fas fa-chevron-down"></i></a>
+            <a href="#aboutus"><i class="fas fa-chevron-down bounce-top"></i></a>
         </div>
     </header>
 
